Fix scrollbar desaster once for all

--- a/src/assets/css/dark.sass
+++ b/src/assets/css/dark.sass
@@ -24,3 +24,15 @@
   background-color: rgba(33,33,33, 1) !important
 .custom-icon
   fill: #FFFFFF
+
+/* Track */
+::-webkit-scrollbar-track
+  background: #424242 /* or any color matching your background */
+/* Handle */
+::-webkit-scrollbar-thumb
+  background: #676767 /* or any color for the scrollbar */
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover
+  background: #858585 /* or any color for the scrollbar on hover */
+
+
