--- a/src/assets/css/light.sass
+++ b/src/assets/css/light.sass
@@ -24,3 +24,15 @@
   background-color: rgba(255,255,255, 1) !important
 .custom-icon
   fill: #646464
+
+
+/* Track */
+::-webkit-scrollbar-track
+  background: #f1f1f1 /* or any color matching your background */
+/* Handle */
+::-webkit-scrollbar-thumb
+  background: #888 /* or any color for the scrollbar */
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover
+  background: #555 /* or any color for the scrollbar on hover */
+
